--- a/src/components/UI/Navigation/Navigation.module.css
+++ b/src/components/UI/Navigation/Navigation.module.css
@@ -23,6 +23,7 @@
 #NavDD {
     font-weight: bold;
     color: #d0b670;
+    border: none;
 }
 
 @media (max-width: 600px) and (min-width: 300px) {
@@ -42,9 +43,18 @@
 .ddlink {
     font-family: 'AGoblinAppears';
     font-size: 9pt;
-    color: #d0b670;
+    color: #eebb5a;
+    padding: 3px;
+    display: flex;
+    justify-content: left;
+    align-items: top;  
+}
+
+.floatright {
+    position: absolute;
+    right: 8px;
 }
 
 hr {
-    background-color: #d0b670;
+    background-color: #eebb5a;
 }
